--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "amazon-ivs-web-broadcast": "^1.31.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "geist": "^1.7.0",
         "lucide-react": "^0.563.0",
         "next": "16.1.6",
         "qrcode": "^1.5.4",
